Fix cross visibility

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -33,7 +33,7 @@ body {
   visibility: visible;
 
   @media screen and (min-width: $desktop-size) {
-    visibility: hidden;
+    visibility: hidden !important;
   }
 }
 
