--- a/src/scss/layout/_nav-bar.scss
+++ b/src/scss/layout/_nav-bar.scss
@@ -54,3 +54,7 @@
     justify-content: flex-end;
   }
 }
+
+.past-conferences {
+  min-width: 120px;
+}
